[package]
name = "todo-api"
version = "0.1.2"
edition = "2024"
publish = false

[dependencies]
modo.workspace = true
modo-db = { workspace = true, features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("sentry"))'] }
