[package]
name = "upload"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
modo.workspace = true
modo-upload.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("sentry"))'] }
